@@ -11,6 +11,7 @@
 		qualified path names
 	fixed query timer in sqlrsh
 	add timer="query/command" parameter to slowqueries logger
+	added odbcversion parameter to ODBC connection
 
 0.64 - fixed bug in sqlrsh that caused it to filter out non-ascii characters
 	added informix connection module
